--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -197,7 +197,19 @@
         <div class="divisor"></div>
         <div class="review-autor">Pamela C., gerente financeiro, <spam class="manaca-color">Alimentos e Bebidas</spam></div>
       </div>
+
+      <div class="review">
+        <div class="review-icon">
+          <%= image_tag 'imagens/marker.svg', class: 'img' %>
+        </div>
+        <div class="review-text">A melhor taxa que encontrei.</div>
+        <div class="divisor"></div>
+        <div class="review-autor">Murilo A., diretor financeiro, <spam class="manaca-color">Tecnologia da Informação</spam></div>
+      </div>
     </div>
+
+
+
 
 
     <!-- ANTECIPATION -->
