Change wrong word

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,7 +105,7 @@
     <!-- INFOS -->
     <div id="infos" class="infos">
       <div class="info-title">
-        Fortaleça seu caixa e <br><spam class="manaca-color">acelere seu conhecimento.</spam>
+        Fortaleça seu caixa e <br><spam class="manaca-color">acelere seu crescimento.</spam>
       </div>
       <div class="info-cards">
         <div class="cards">
