--- a/app/assets/stylesheets/components/_footer_dark.scss
+++ b/app/assets/stylesheets/components/_footer_dark.scss
@@ -173,7 +173,7 @@ footer .logo  {
 
 .duvidas .card-title {
   color: white;
-  font-family: 'Avenir-medium';
+  font-family: 'Avenir-Next-Bold';
   font-size: 28px;
   margin-bottom: 15px !important;
   margin-top: 0px !important;
